--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.nemus.newspaper2">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,13 +21,20 @@
             </intent-filter>
         </activity>
 
-        <!--suppress AndroidDomInspection -->
+        <!-- suppress AndroidDomInspection -->
         <provider
-            android:authorities="com.example.nemus.newspaper2.myContentProvider"
-            android:name=".myContentProvider" />
+            android:name=".myContentProvider"
+            android:authorities="com.example.nemus.newspaper2.myContentProvider" />
 
+        <receiver android:name=".NewAppWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/new_app_widget_info" />
+        </receiver>
     </application>
-
-    <uses-permission android:name="android.permission.INTERNET"/>
 
 </manifest>
